[package]

name = "surgehours"
version = "0.0.1"
authors = [ "Mike Nelson <mnelson@surgeforward.com>" ]

[dependencies]
cookie = "0.9"
serde = "*"
serde_derive = "*"
serde_json = "*"
futures = "*"
tokio = "*"
tokio-core = "*"
hyper = "*"
hyper-tls = "*"
rustc-serialize = "*"
clap = "2"
chrono = "0.4"
rpassword = "0.2.2"
regex = "0.2"